# Trackball

./: .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt  README.md  debug.sh  debug_swd.sh  flash.sh  flash_swd.sh
firmware/include/: buttons.h  config.h  console.h  controls.h  debug.h  fat_disk.h  ffconf.h  log.h  pmw3360.h  pmw3360_registers.h  pmw3360_srom.h  tusb_config.h  usb.h  usb_cdc.h  usb_descriptors.h  usb_hid.h  usb_msc.h  util.h
firmware/src/: buttons.c  console.c  controls.c  debug.c  fat_disk.c  log.c  main.c  pmw3360.c  usb.c  usb_cdc.c  usb_descriptors.c  usb_hid.c  usb_msc.c  util.c
firmware/util/: README.md  visualize_data.py  visualize_frame.py
hardware/: README.md  trackball.scad
